--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,13 @@
     "packages/*"
   ],
   "useNx": true,
-  "version": "0.0.0",
+  "version": "independent",
   "npmClient": "yarn",
-  "useWorkspaces": true
+  "useWorkspaces": true,
+  "command": {
+    "publish": {
+      "registry": "https://npm.pkg.github.com"
+    }
+  },
+  "independent": true
 }
