--- a/packages/sample/package.json
+++ b/packages/sample/package.json
@@ -1,8 +1,12 @@
 {
   "name": "@localitos/sample",
-  "version": "0.0.17",
+  "version": "0.0.18",
   "main": "index.ts",
   "license": "MIT",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
+  "repository": "git@github.com:Localitos/design-system.git",
   "scripts": {
     "build": "rm -rf dist && rollup --config",
     "test": "jest"
@@ -22,5 +26,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.7.4"
-  }
+  },
+  "gitHead": "5bc800187a469c323f7d64a7f5a8cd9ecc3d08a8"
 }
