--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "repository": "git@github.com:Localitos/design-system.git",
   "license": "MIT",
   "private": true,
+  "type": "module",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   },
@@ -28,7 +29,8 @@
     "@storybook/testing-library": "^0.0.13",
     "babel-loader": "^8.2.5",
     "lerna": "5.1.0",
-    "nx": "14.2.0"
+    "nx": "14.2.0",
+    "plop": "^3.1.1"
   },
   "dependencies": {}
 }
