--- a/template/tsconfig.lib.json
+++ b/template/tsconfig.lib.json
@@ -4,6 +4,6 @@
     "outDir": "./dist/out-tsc",
     "types": ["node"]
   },
-  "exclude": ["**/*.spec.ts", "**/*.spec.tsx", "node_modules"],
+  "exclude": ["**/*.test.ts", "**/*.test.tsx", "node_modules"],
   "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx"]
 }
