--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "registry": "https://npm.pkg.github.com"
   },
   "scripts": {
-    "storybook": "start-storybook -p 6006",
+    "add-component": "plop",
+    "bootstrap": "lerna bootstrap",
     "build-storybook": "build-storybook",
     "build-static-webapp": "expo build:web",
-    "publish-packages": "lerna publish --conventional-commits -m 'chore: publish packages'"
+    "publish-packages": "lerna publish --conventional-commits -m 'chore: publish packages'",
+    "storybook": "start-storybook -p 6006"
   },
   "workspaces": [
     "packages/*"
