--- a/package.json
+++ b/package.json
@@ -24,14 +24,22 @@
     "@storybook/addon-essentials": "^6.5.9",
     "@storybook/addon-interactions": "^6.5.9",
     "@storybook/addon-links": "^6.5.9",
-    "@storybook/builder-webpack4": "^6.5.9",
-    "@storybook/manager-webpack4": "^6.5.9",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/builder-webpack5": "^6.5.9",
+    "@storybook/manager-webpack5": "^6.5.9",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
+    "@tailwindcss/forms": "^0.5.2",
     "babel-loader": "^8.2.5",
     "lerna": "5.1.0",
     "nx": "14.2.0",
-    "plop": "^3.1.1"
+    "plop": "^3.1.1",
+    "postcss": "^8",
+    "postcss-import": "^14.1.0",
+    "tailwindcss": "^3.1.4"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "resolutions": {
+    "webpack": "^5"
+  }
 }
