--- a/packages/Sample/package.json
+++ b/packages/Sample/package.json
@@ -9,13 +9,28 @@
   "repository": "git@github.com:Localitos/design-system.git",
   "scripts": {
     "build": "rm -rf dist && rollup --config",
-    "test": "jest"
+    "test": "jest",
+    "prettier-check": "prettier --check package.json tsconfig.json \"./src/**/*.{tsx,ts,json}\"",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx"
   },
   "devDependencies": {
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^28.1.4",
     "@types/react": "^18.0.14",
+    "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.4.6",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-testing-library": "^5.5.1",
     "jest": "^28.1.2",
+    "jest-watch-typeahead": "^0.6.5",
+    "prettier": "^2.7.1",
+    "pretty-quick": "^3.1.3",
     "rollup": "^2.75.7",
     "rollup-plugin-typescript2": "^0.32.1",
     "ts-jest": "^28.0.5",
@@ -26,6 +41,5 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.7.4"
-  },
-  "gitHead": "5bc800187a469c323f7d64a7f5a8cd9ecc3d08a8"
+  }
 }
