--- a/packages/Sample/package.json
+++ b/packages/Sample/package.json
@@ -15,7 +15,8 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx"
   },
   "devDependencies": {
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/jest-dom": "^5.14.5",
+    "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.4",
     "@types/react": "^18.0.14",
     "eslint": "^8.16.0",
@@ -28,6 +29,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^5.5.1",
     "jest": "^28.1.2",
+    "jest-dom": "^4.0.0",
     "jest-watch-typeahead": "^0.6.5",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
@@ -38,8 +40,8 @@
   },
   "dependencies": {
     "jest-environment-jsdom": "^28.1.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^4.7.4"
   }
 }
