chore: deploy on netlify
chore: fix ci config

chore: deploy on netlify

fix(sample): change background color

chore: test ci with netlify-cli

chore: setup github user

chore: change packages set

chore: give write access

chore: add rsa key

Update Semaphore configuration

Update Semaphore configuration

Publish

 - @localitos/sample@0.0.22

chore: update ci

chore: skip ci

Update Semaphore configuration

Update Semaphore configuration

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -34,7 +34,7 @@ blocks:
           commands:
             - npx lerna run prettier-check
 promotions:
-  - name: Publish packages
+  - name: Publish & Deploy
     pipeline_file: publish.yml
     auto_promote:
-      when: tag =~ '.*' AND result = 'passed'
+      when: branch = 'main' AND tag =~ '.*' AND result = 'passed'
