--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -37,4 +37,4 @@ promotions:
   - name: Publish packages
     pipeline_file: publish.yml
     auto_promote:
-      when: tag =~ '.*' AND result = 'passed'
+      when: branch = 'main' AND tag =~ '.*' AND result = 'passed'
