--- a/.semaphore/publish.yml
+++ b/.semaphore/publish.yml
@@ -17,7 +17,7 @@ blocks:
       prologue:
         commands:
           - checkout
-          - "npm set @localitos:registry=https://npm.pkg.github.com/pluto"
+          - "npm set @localitos:registry=https://npm.pkg.github.com"
           - 'npm set "//npm.pkg.github.com/:_authToken=$GITHUB_TOKEN"'
           - 'npx lerna exec -- cache restore node-modules-\$LERNA_PACKAGE_NAME-$SEMAPHORE_GIT_BRANCH,node-modules-\$LERNA_PACKAGE_NAME node_modules'
           - npx lerna bootstrap
