--- a/.semaphore/publish.yml
+++ b/.semaphore/publish.yml
@@ -17,7 +17,7 @@ blocks:
       prologue:
         commands:
           - checkout
-          - "npm set @localitos:registry=https://npm.pkg.github.com"
+          - 'npm set @localitos:registry=https://npm.pkg.github.com'
           - 'npm set "//npm.pkg.github.com/:_authToken=$GITHUB_TOKEN"'
           - 'npx lerna exec -- cache restore node-modules-\$LERNA_PACKAGE_NAME-$SEMAPHORE_GIT_BRANCH,node-modules-\$LERNA_PACKAGE_NAME node_modules'
           - npx lerna bootstrap
@@ -37,5 +37,7 @@ blocks:
           commands:
             - cache restore storybook-static
             - npx netlify-cli deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_ACCESS_TOKEN --prod --dir=storybook-static
+      secrets:
+        - name: Github Pluto Write Access
     dependencies:
       - Publish
