--- a/.semaphore/publish.yml
+++ b/.semaphore/publish.yml
@@ -14,7 +14,7 @@ blocks:
             - npx lerna publish from-git --yes
       secrets:
         - name: Github Packages
-        - name: pluto
+        - name: pluto-git-deploy
       prologue:
         commands:
           - checkout
