--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
   },
   "scripts": {
     "add-component": "plop",
-    "bootstrap": "lerna bootstrap",
     "build-storybook": "build-storybook",
-    "build-static-webapp": "expo build:web",
-    "create-version": "lerna version --conventional-commits -m 'chore: create packages version'",
-    "storybook": "start-storybook -p 6006"
+    "storybook": "start-storybook -p 6006",
+    "build": "turbo run build",
+    "dev": "turbo run dev --no-cache --parallel --continue",
+    "lint": "turbo run lint",
+    "clean": "turbo run clean && rm -rf node_modules",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "changeset": "changeset",
+    "version-packages": "changeset version",
+    "release": "turbo run build && changeset publish"
   },
   "workspaces": [
     "packages/*"
   ],
   "devDependencies": {
-    "@babel/core": "^7.18.6",
+    "@changesets/changelog-github": "0.4.5",
+    "@changesets/cli": "^2.22.0",
     "@storybook/addon-a11y": "^6.5.9",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
@@ -31,14 +37,11 @@
     "@storybook/manager-webpack5": "^6.5.9",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
-    "@tailwindcss/forms": "^0.5.2",
-    "babel-loader": "^8.2.5",
-    "lerna": "5.1.0",
-    "nx": "14.2.0",
+    "eslint": "^8.15.0",
+    "eslint-config-acme": "*",
+    "prettier": "^2.5.1",
     "plop": "^3.1.1",
-    "postcss": "^8",
-    "postcss-import": "^14.1.0",
-    "tailwindcss": "^3.1.4"
+    "turbo": "latest"
   },
   "dependencies": {},
   "resolutions": {
