--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -51,5 +51,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: compiled-js-and-types
-          path: |
-            packages/**/dist/**/*
+          path: packages/**/dist/**/*
