chore: add components package structure

--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -48,7 +48,9 @@ jobs:
         run: yarn build
 
       - name: Store build artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: compiled-js-and-types
-          path: packages/**/dist/**/*
+          path: |
+            packages/components/**/dist/**/*
+            !packages/components/**/node_modules/**/*
