--- a/packages/components/Sample/package.json
+++ b/packages/components/Sample/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@localitos/sample",
+  "name": "@localitos/pluto-components",
   "version": "0.0.25",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
