feat: setup lint and tsconfig packages

--- a/turbo.json
+++ b/turbo.json
@@ -1,21 +1,19 @@
 {
   "pipeline": {
     "build": {
-      "outputs": [
-        "dist/**"
-      ],
-      "dependsOn": [
-        "^build"
-      ]
+      "outputs": ["dist/**"],
+      "dependsOn": ["^build"]
     },
     "test": {
-      "outputs": [
-        "coverage/**"
-      ],
+      "outputs": ["coverage/**"],
       "dependsOn": []
     },
     "lint": {
       "outputs": []
+    },
+    "tsc": {
+      "outputs": ["dist/**"],
+      "inputs": ["src/**/*.tsx", "src/**/*.ts"]
     },
     "dev": {
       "cache": false
