--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "changeset": "changeset",
     "version-packages": "changeset version",
-    "release": "turbo run build && changeset publish"
+    "release": "turbo run build && changeset publish",
+    "type-check": "turbo run tsc"
   },
   "workspaces": [
     "packages/**"
