--- a/packages/components/Sample/package.json
+++ b/packages/components/Sample/package.json
@@ -16,11 +16,11 @@
   "scripts": {
     "test": "jest",
     "prettier-check": "prettier --check package.json tsconfig.json \"./src/**/*.{tsx,ts,json}\"",
-    "typecheck": "tsc --noEmit",
     "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
     "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
     "lint": "TIMING=1 eslint src/**/*.ts* --fix",
-    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
+    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
+    "tsc": "tsc"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.5",
@@ -29,14 +29,7 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.4",
     "eslint": "^8.16.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.4.6",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.30.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-testing-library": "^5.5.1",
+    "eslint-config-pluto": "*",
     "jest": "^28.1.2",
     "jest-dom": "^4.0.0",
     "jest-environment-jsdom": "^28.1.2",
@@ -45,6 +38,7 @@
     "pretty-quick": "^3.1.3",
     "react": "^18.1.0",
     "ts-jest": "^28.0.5",
+    "tsconfig-pluto": "*",
     "tslib": "^2.4.0",
     "tsup": "^5.10.1",
     "typescript": "^4.5.3"
