--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
   },
   "scripts": {
     "add-component": "plop",
-    "build-storybook": "build-storybook",
-    "storybook": "start-storybook -p 6006",
     "build": "turbo run build",
-    "dev": "turbo run dev --no-cache --parallel --continue",
-    "lint": "turbo run lint",
-    "clean": "turbo run clean && rm -rf node_modules",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "build-storybook": "build-storybook",
     "changeset": "changeset",
-    "version-packages": "changeset version",
+    "clean": "turbo run clean && rm -rf node_modules",
+    "dev": "turbo run dev --no-cache --parallel --continue",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "lint": "turbo run lint",
     "release": "turbo run build && changeset publish",
-    "type-check": "turbo run tsc"
+    "storybook": "start-storybook -p 6006",
+    "type-check": "turbo run tsc",
+    "version-packages": "changeset version"
   },
   "workspaces": [
     "packages/**"
@@ -29,6 +29,7 @@
     "@changesets/cli": "^2.22.0",
     "@storybook/addon-a11y": "^6.5.9",
     "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-docs": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
     "@storybook/addon-interactions": "^6.5.9",
     "@storybook/addon-links": "^6.5.9",
@@ -41,6 +42,8 @@
     "eslint": "^8.15.0",
     "prettier": "^2.5.1",
     "plop": "^3.1.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "turbo": "latest"
   },
   "dependencies": {},
