--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@localitos/sample",
-  "version": "0.0.25",
+  "name": "@localitos/components",
+  "version": "0.0.0",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -14,12 +14,12 @@
   },
   "repository": "git@github.com:Localitos/pluto.git",
   "scripts": {
-    "test": "jest",
-    "prettier-check": "prettier --check package.json tsconfig.json \"./src/**/*.{tsx,ts,json}\"",
-    "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
-    "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
-    "lint": "TIMING=1 eslint src/**/*.ts* --fix",
+    "build": "tsup src/index.ts --format esm,cjs --dts --external react",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
+    "dev": "tsup src/index.ts --format esm,cjs --watch --dts --external react",
+    "lint": "TIMING=1 eslint src/**/*.ts* --fix",
+    "prettier-check": "prettier --check package.json tsconfig.json \"./src/**/*.{tsx,ts,json}\"",
+    "test": "jest",
     "tsc": "tsc"
   },
   "devDependencies": {
@@ -37,6 +37,7 @@
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
     "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "ts-jest": "^28.0.5",
     "tsconfig-pluto": "*",
     "tslib": "^2.4.0",
