test: add jest config and gh action

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "lint": "turbo run lint",
     "release": "turbo run build && changeset publish",
     "storybook": "start-storybook -p 6006",
+    "test": "jest",
+    "test:ci": "jest --ci",
+    "test:coverage": "jest --runInBand --coverage",
     "type-check": "turbo run tsc",
     "version-packages": "changeset version"
   },
@@ -39,11 +42,19 @@
     "@storybook/manager-webpack5": "^6.5.9",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
+    "@testing-library/jest-dom": "^5.14.5",
+    "@testing-library/react": "^13.3.0",
+    "@types/jest": "^28.1.4",
     "eslint": "^8.15.0",
+    "jest": "^28.1.2",
+    "jest-dom": "^4.0.0",
+    "jest-environment-jsdom": "^28.1.2",
+    "jest-watch-typeahead": "^0.6.5",
     "prettier": "^2.5.1",
     "plop": "^3.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "ts-jest": "^28.0.5",
     "turbo": "latest"
   },
   "dependencies": {},
