feat: setup turborepo infrastructure (#2)
* feat: setup turborepo infrastructure

* chore: remove semaphore pipeline

* chore: add on-pull-request gh action

* chore: add upload artifacts gh action

* chore: change artifacts path

* chore: add components package structure

* fix: component package builds

* feat: setup lint and tsconfig packages

* feat: add package size gh action

* chore: disable package size gh action

* chore: add missing deps, flat structure, plop templates

* chore: add labeler, linter, update readme

* chore: add labeler config

* test: add jest config and gh action

* test: use correct jest:ci script

* chore: remove class names

* Update pull_request_template.md

Co-authored-by: Ana Paula Vale <apvalefin@gmail.com>

* chore: lint fixes and readme fixes

* chore: adjust story template, change start script

* chore: change component package name, adjust pr template

* chore: fix typos in readme

Co-authored-by: Ana Paula Vale <apvalefin@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,17 @@
 .vscode/
 /**/node_modules
 
-packages/**/dist/
-
 .npmrc
 
 /storybook-static
+
+# Turborepo
+.turbo
+
+# Build artifacts
+**/build/**
+**/dist/**
+
+# Jest
+.jest-coverage
+.jest-cache
