--- a/package.json
+++ b/package.json
@@ -9,19 +9,30 @@
   },
   "scripts": {
     "add-component": "plop",
-    "bootstrap": "lerna bootstrap",
+    "build": "turbo run build",
     "build-storybook": "build-storybook",
-    "build-static-webapp": "expo build:web",
-    "create-version": "lerna version --conventional-commits -m 'chore: create packages version'",
-    "storybook": "start-storybook -p 6006"
+    "changeset": "changeset",
+    "clean": "turbo run clean && rm -rf node_modules",
+    "dev": "turbo run dev --no-cache --parallel --continue",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "lint": "turbo run lint",
+    "release": "turbo run build && changeset publish",
+    "start": "start-storybook -p 6006",
+    "test": "jest",
+    "test:ci": "jest --ci",
+    "test:coverage": "jest --runInBand --coverage",
+    "type-check": "turbo run tsc",
+    "version-packages": "changeset version"
   },
   "workspaces": [
-    "packages/*"
+    "packages/**"
   ],
   "devDependencies": {
-    "@babel/core": "^7.18.6",
+    "@changesets/changelog-github": "0.4.5",
+    "@changesets/cli": "^2.22.0",
     "@storybook/addon-a11y": "^6.5.9",
     "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-docs": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
     "@storybook/addon-interactions": "^6.5.9",
     "@storybook/addon-links": "^6.5.9",
@@ -31,14 +42,20 @@
     "@storybook/manager-webpack5": "^6.5.9",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
-    "@tailwindcss/forms": "^0.5.2",
-    "babel-loader": "^8.2.5",
-    "lerna": "5.1.0",
-    "nx": "14.2.0",
+    "@testing-library/jest-dom": "^5.14.5",
+    "@testing-library/react": "^13.3.0",
+    "@types/jest": "^28.1.4",
+    "eslint": "^8.15.0",
+    "jest": "^28.1.2",
+    "jest-dom": "^4.0.0",
+    "jest-environment-jsdom": "^28.1.2",
+    "jest-watch-typeahead": "^0.6.5",
+    "prettier": "^2.5.1",
     "plop": "^3.1.1",
-    "postcss": "^8",
-    "postcss-import": "^14.1.0",
-    "tailwindcss": "^3.1.4"
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "ts-jest": "^28.0.5",
+    "turbo": "latest"
   },
   "dependencies": {},
   "resolutions": {
