--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dev": "turbo run dev --no-cache --parallel --continue",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "lint": "turbo run lint",
+    "prepare": "husky install",
     "release": "turbo run build && changeset publish",
     "start": "start-storybook -p 6006",
     "test": "jest",
@@ -30,6 +31,8 @@
   "devDependencies": {
     "@changesets/changelog-github": "0.4.5",
     "@changesets/cli": "^2.22.0",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
     "@storybook/addon-a11y": "^6.5.9",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-docs": "^6.5.9",
@@ -46,18 +49,18 @@
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.4",
     "eslint": "^8.15.0",
+    "husky": "^8.0.1",
     "jest": "^28.1.2",
     "jest-dom": "^4.0.0",
     "jest-environment-jsdom": "^28.1.2",
     "jest-watch-typeahead": "^0.6.5",
-    "prettier": "^2.5.1",
     "plop": "^3.1.1",
+    "prettier": "^2.5.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "ts-jest": "^28.0.5",
     "turbo": "latest"
   },
-  "dependencies": {},
   "resolutions": {
     "webpack": "^5"
   }
