--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -19,8 +19,10 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-sonarjs": "^0.15.0",
     "eslint-plugin-storybook": "^0.6.4",
-    "eslint-plugin-testing-library": "^5.5.1"
+    "eslint-plugin-testing-library": "^5.5.1",
+    "eslint-plugin-unicorn": "^43.0.2"
   },
   "publishConfig": {
     "access": "public"
