feat: added browserslist shareable config

--- a/package.json
+++ b/package.json
@@ -70,5 +70,8 @@
       "prettier --write",
       "eslint --fix"
     ]
-  }
+  },
+  "browserslist": [
+    "extends @localyze/browserslist-config-pluto"
+  ]
 }
