--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -44,5 +44,8 @@
     "tslib": "^2.4.0",
     "tsup": "^5.10.1",
     "typescript": "^4.5.3"
-  }
+  },
+  "browserslist": [
+    "extends @localyze/browserslist-config-pluto"
+  ]
 }
