--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@testing-library/jest-dom": "^5.14.5",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.4",
+    "cspell": "^6.8.1",
     "eslint": "^8.15.0",
     "husky": "^8.0.1",
     "jest": "^28.1.2",
