chore: add updated color tokens

--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -11,7 +11,7 @@
     "dist/**"
   ],
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "access": "public"
   },
   "repository": {
     "type": "git",
