--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "tsconfig-pluto",
+  "name": "@localyze/tsconfig-pluto",
   "version": "0.0.0",
   "license": "MIT",
-  "main": "index.js",
+  "main": "tsconfig.json",
   "files": [
-    "base.json"
+    "tsconfig.json"
   ],
   "publishConfig": {
     "access": "public"
