--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "tsconfig-pluto/base.json",
+  "extends": "@localyze/tsconfig-pluto",
   "include": [
     ".",
     ".jest/jest-setup.ts",
