--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -11,9 +11,13 @@
     "dist/**"
   ],
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "access": "public"
   },
-  "repository": "git@github.com:Localitos/pluto.git",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:Localitos/pluto.git",
+    "directory": "packages/components"
+  },
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --dts --external react",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
