--- a/packages/theme/tsconfig.json
+++ b/packages/theme/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "tsconfig-pluto/base.json",
+  "extends": "@localyze/tsconfig-pluto",
   "compilerOptions": {
     "outDir": "dist/"
   },
