--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
     "webpack": "^5"
   },
   "lint-staged": {
-    "*.{ts,tsx,md}": [
-      "prettier --write",
+    "**/*": "prettier --write --ignore-unknown",
+    "*.{ts,tsx}": [
       "eslint --fix"
     ]
   },
