--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@localyze/pluto-theme",
+  "name": "@localyze-pluto/theme",
   "version": "0.0.0",
   "description": "Pluto Design System Theme",
   "main": "./dist/index.js",
@@ -31,8 +31,8 @@
     "@stitches/react": "^1.2.8"
   },
   "devDependencies": {
-    "@localyze/eslint-config-pluto": "*",
-    "@localyze/tsconfig-pluto": "*",
+    "@localyze-pluto/eslint-config": "*",
+    "@localyze-pluto/tsconfig": "*",
     "@testing-library/jest-dom": "^5.14.5",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.4",
