--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -19,7 +19,7 @@
     "directory": "packages/components"
   },
   "scripts": {
-    "build": "tsup src/index.ts --format esm,cjs --dts --external react",
+    "build": "tsup src/index.ts --format esm,cjs --dts --external react --minify",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
     "dev": "tsup src/index.ts --format esm,cjs --watch --dts --external react",
     "lint": "TIMING=1 eslint src/**/*.ts* --fix",
@@ -27,9 +27,14 @@
     "test": "jest",
     "tsc": "tsc"
   },
+  "dependencies": {
+    "@localyze-pluto/theme": "^0.0.1",
+    "@stitches/react": "^1.2.8",
+    "lodash": "^4.17.21"
+  },
   "devDependencies": {
-    "@localyze-pluto/eslint-config": "*",
-    "@localyze-pluto/tsconfig": "*",
+    "@localyze-pluto/eslint-config": "^1.0.0",
+    "@localyze-pluto/tsconfig": "^1.0.0",
     "@testing-library/jest-dom": "^5.14.5",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.4",
