--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -31,8 +31,8 @@
     "@stitches/react": "^1.2.8"
   },
   "devDependencies": {
-    "@localyze-pluto/eslint-config": "*",
-    "@localyze-pluto/tsconfig": "*",
+    "@localyze-pluto/eslint-config": "^1.0.0",
+    "@localyze-pluto/tsconfig": "^1.0.0",
     "@testing-library/jest-dom": "^5.14.5",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.4",
