--- a/.github/workflows/on_release_publish.yml
+++ b/.github/workflows/on_release_publish.yml
@@ -34,6 +34,7 @@ jobs:
         uses: changesets/action@v1
         with:
           publish: yarn release
+          commit: "chore(release): version packages"
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN_BOT }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
