--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@localyze-pluto/components",
+  "name": "@pluto/components",
   "version": "0.0.1",
   "description": "Pluto Design System Components",
   "main": "./dist/index.js",
@@ -28,13 +28,13 @@
     "tsc": "tsc"
   },
   "dependencies": {
-    "@localyze-pluto/theme": "^0.0.1",
+    "@pluto/theme": "^0.0.1",
     "@stitches/react": "^1.2.8",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@localyze-pluto/eslint-config": "^1.0.0",
-    "@localyze-pluto/tsconfig": "^1.0.0",
+    "@pluto/eslint-config": "^1.0.0",
+    "@pluto/tsconfig": "^1.0.0",
     "@testing-library/jest-dom": "^5.14.5",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.4",
@@ -55,6 +55,6 @@
     "typescript": "^4.5.3"
   },
   "browserslist": [
-    "extends @localyze-pluto/browserslist-config"
+    "extends @pluto/browserslist-config"
   ]
 }
