--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@localyze-pluto/theme",
+  "name": "@pluto/theme",
   "version": "0.0.1",
   "description": "Pluto Design System Theme",
   "main": "./dist/index.js",
@@ -31,8 +31,8 @@
     "@stitches/react": "^1.2.8"
   },
   "devDependencies": {
-    "@localyze-pluto/eslint-config": "^1.0.0",
-    "@localyze-pluto/tsconfig": "^1.0.0",
+    "@pluto/eslint-config": "^1.0.0",
+    "@pluto/tsconfig": "^1.0.0",
     "@testing-library/jest-dom": "^5.14.5",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.4",
